tests/ui/derive/fail_validate_ts_rename_field.rs
#[derive(ts_rs::TS, foundry::Validate)]
struct TsRenameValidate {
    #[ts(rename = "emailAddress")]
    email: String,
}

fn main() {}
